--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,46 +1,54 @@
 body
 {
-	color: #FEFFEA;
-	background-color: #706C61;
+	color: black;
+	background-color: white;
 	font-family: Tahoma;
 	font-size: 15px;
-	padding: 0 25px;
-
 
 }
-.container {
-  background-color: rgb(0, 0, 0);
+header {
 	width: 100%;
-	height: 25px;
+    height: 50px;
+    background-color: rgb(60, 87, 20);
 	padding: 15px 0;
+	display: flex;
 }
 
 h1
 {
-	text-align: center;
-	color: #FEFFEA
+	color: white;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: min(5vw, 1.2em);
+	margin-left: 20%;
+	margin-right: 10%;
+	
 }
 
-header
-{
+nav {
+	width: 60%;
+	max-width: 300px;
+	height: 50px;
+  }
+
+nav > ul {
+	display: flex;
+	justify-content: space-evenly;
+  }
+
+  nav > ul > li {
+	color: #dfdfe2;
+	margin: 0 0.4rem;
+	padding: 0.2rem;
+	display: block;
+  }
+
+  li > a, a {
+	color: inherit;
 	text-decoration: none;
-	color: black;
-}
+  }
 
-
-
-a
-{
-	text-decoration: none;
-	color: #FEFFEA;
-}
-
-a:hover
-{
-	color: teal;
-}
-
-header, footer, .credits
-{
-  text-align: center;
-}
+  nav > ul > li:hover {
+	background-color: #dfdfe2;
+	color: #1b1b32;
+	cursor: pointer;
+  }
