i need you all to work.

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -9,7 +9,7 @@
 
     <li><a href="https://mavedave6.github.io/itis3135/contract/contract.html">Contract</a></li>
 
-     <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introdiction</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
      <li><a href="https://mavedave6.github.io/itis3135/website_evaluations.html">Web_Evaluations</a></li>
 </ul>
