--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -12,5 +12,11 @@
      <li><a href="https://webpages.charlotte.edu/dudoeyop/itis3135/intro.html">Introduction</a></li>
 
      <li><a href="https://webpages.charlotte.edu/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/calculator.html"></a>Calculator</li>
+     <li><a href="https://mavedave6.github.io/itis3135/crap.html"></a>Crap</li>
+     <li><a href="https://mavedave6.github.io/itis3135/firstscripts.html"></a>FirstScripts</li>
+     <li><a href="https://mavedave6.github.io/itis3135/Polygons.html"></a>Polygons</li>
+
 </ul>
 </nav>
