--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,6 +17,8 @@
      <li><a href="https://mavedave6.github.io/itis3135/crap.html"></a>Crap</li>
      <li><a href="https://mavedave6.github.io/itis3135/firstscripts.html"></a>FirstScripts</li>
      <li><a href="https://mavedave6.github.io/itis3135/Polygons.html"></a>Polygons</li>
+     <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</li>
 
 </ul>
 </nav>
