--- a/itis3135/styles/tablestyle.css
+++ b/itis3135/styles/tablestyle.css
@@ -1,6 +1,6 @@
 table{
-  width: 400px; 
-  
+  width: 400px;
+
 }
 th{
     background-color: aquamarine;
@@ -18,5 +18,9 @@ th,td{
 }
 .active-row{
     border-bottom: 2px solid black;
-
+}
+.active-row2{
+  border-top:  2px solid black;
+  background-color: aquamarine;
+  text-align: left;
 }
