--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,4 +1,4 @@
-<h1><a href="https://webpages.charlotte.edu/dudoeyop/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+<h1><a href="https://mavedave6.github.io/dudoeyop/itis3135/index.html">Red Hot Bell Peppers</a></h1>
  <nav>
   <ul>
     <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/index.html">Home</a></li>
