--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,15 +1,15 @@
-<h1><a href="https://mavedave6.github.io/dudoeyop/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+<h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
  <nav>
   <ul>
-    <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/index.html">Home</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
 
-    <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/tables.html">Tables</a> </li>
+    <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
 
-    <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/forms.html">Forms</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
 
-    <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/contract.html">Contract</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
 
-     <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/intro.html">Introduction</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
 
      <li><a href=https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
