--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,6 +1,7 @@
-<h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+
  <nav>
   <ul>
+    <li><h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1></li>
     <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
 
     <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
