--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -21,22 +21,22 @@ header {
 h1
 {
 	color: white;
-
 	font-size: min(5vw, 1.2em);
-	
-
+}
+header{
+	width: 100%
 }
 
 
 nav {
-	width: 60%;
-	max-width: 300px;
+	width: 100%;
 	height: 50px;
   }
 
 nav > ul {
 	display: flex;
 	justify-content: space-evenly;
+	float: right;
   }
 
   nav > ul > li {
