--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -64,8 +64,8 @@ nav > ul {
 	}
   footer{
 
-   margin: auto;
-    position: absolute;
+   margin-top: 20px;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
