--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -10,7 +10,7 @@ body
 	margin: 10px;
 
 }
-header {
+header,footer {
 	width: 100%;
   height: 50px;
   background-color: #2B3A55;
@@ -22,9 +22,6 @@ h1
 {
 	color: white;
 	font-size: min(5vw, 1.2em);
-}
-header{
-	width: 100%
 }
 
 
@@ -63,11 +60,13 @@ nav > ul {
 		cursor: pointer;
 	}
   footer{
-
-   margin-top: 20px;
+   margin-top: 5%;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    height: 2rem;
     text-align: center;
+		color: white;
+		display: flex;
+		justify-content: space-evenly;
   }
