--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -3,23 +3,18 @@
   <ul>
     <li><h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1></li>
     <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-
     <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
-
     <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
-
     <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
-
      <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-
      <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/calculator.html"></a>Calculator</li>
-     <li><a href="https://mavedave6.github.io/itis3135/crap.html"></a>Crap</li>
-     <li><a href="https://mavedave6.github.io/itis3135/firstscripts.html"></a>FirstScripts</li>
-     <li><a href="https://mavedave6.github.io/itis3135/Polygons.html"></a>Polygons</li>
+     <li><a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/firstscripts.html">FirstScripts</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/Polygons.html">Polygons</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</li>
+     <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
 
 </ul>
 </nav>
