--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -12,7 +12,7 @@
      <li><a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/firstScripts.html">FirstScripts</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/Polygons.html">Polygons</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
 
