--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -15,6 +15,7 @@
      <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
      <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/accessibility/Activity_Accessibility.html">Accessibility</a></li>
 
 </ul>
 </nav>
