--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -12,7 +12,7 @@ body
 }
 header,footer {
 	width: 100%;
-  
+
   background-color: #2B3A55;
 	padding: 15px 0;
 	display: flex;
@@ -21,7 +21,7 @@ header,footer {
 h1
 {
 	color: white;
-	font-size: min(5vw, 1.2em);
+	font-size: 15px;
 }
 
 
