--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,21 +1,24 @@
 
- <nav>
-  <ul>
-    <li><h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1></li>
-    <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-    <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
-    <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
-    <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-     <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/firstScripts.html">FirstScripts</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
+<h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
+<div class="header">
+  <nav>
+   <ul>
 
-</ul>
-</nav>
+     <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
+     <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
+     <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
+      <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/firstScripts.html">FirstScripts</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
+
+ </ul>
+ </nav>
+</div>
