--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -10,9 +10,11 @@ body
 	margin: 10px;
 
 }
-header,footer {
+header{
 	width: 100%;
-
+}
+.header,footer {
+	width: 100%;
   background-color: #2B3A55;
 	padding: 15px 0;
 	display: flex;
