--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,6 +18,7 @@
       <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
       <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
       <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
+      <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
 
  </ul>
  </nav>
