--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -6,7 +6,7 @@
     </a></li>
     <li><a href="https://jigsaw.w3.org/css-validator/check/referer"
     id = "validation_link_css">
-     <img src="/images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+     <img src="./images/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
     </a></li>
   </ul>
 </nav>
