--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -13,7 +13,7 @@ body
 header{
 	width: 100%;
 	background-color: #2B3A55;
-	padding: 15px 0;
+	padding: 15px 5px;
 }
 .header,footer {
 	width: 100%;
