--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,26 +1,22 @@
-
 <h1 class="tits"><a href="https://mavedave6.github.io/itis3135/index.html">Red Hot Bell Peppers</a></h1>
-<div class="header">
-  <nav>
-   <ul>
+<nav>
+  <ul>
+    <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
+    <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
+    <li<a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/firstScripts.html">FirstScripts</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
+    <li<a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
 
-     <li><a href="https://mavedave6.github.io/itis3135/index.html">Home</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/tables.html">Tables</a> </li>
-     <li><a href="https://mavedave6.github.io/itis3135/forms.html">Forms</a></li>
-     <li><a href="https://mavedave6.github.io/itis3135/contract.html">Contract</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/intro.html">Introduction</a></li>
-      <li><a href="https://mavedave6.github.io/dudoeyop/itis3135/website_evaluations.html">Web_Evaluations</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/arrays.html">Arrays</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/calculator.html">Calculator</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/crap.html">Crap</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/firstScripts.html">FirstScripts</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/polygons.html">Polygons</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/hobby/index.html">Hobby</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/project/D-Collection.html">Project</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
-      <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
-
- </ul>
- </nav>
-</div>
+  </ul>
+</nav>
