--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -13,12 +13,13 @@ body
 	margin: 10px;
 
 }
-header{
-	width: 100%;
-	background-color: #2B3A55;
-	padding: 15px 5px;
+
+footer {
+    text-align: center;
 }
-.header,footer {
+
+
+footer {
 	width: 100%;
   background-color: #2B3A55;
 	display: flex;
@@ -34,46 +35,35 @@ h1
 {
 	color: white;
 	font-size: 15px;
+	text-align: center;
+}
+header {
+	background-color: lightblue;
+	padding: 20px;
+	max-width: 100%;
+}
+nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+}
+nav li {
+	margin: 0 10px;
+	margin-top: 2px;
+	text-align:center;
+}
+nav a, h1 a{
+	color: white;
+	text-decoration: none;
+}
+nav a:hover, a:hover {
+	color: lightgray;
 }
 
 
-nav {
-	width: 100%;
-	height: 50px;
-  }
-	main{
-		padding-bottom: 10%;
-	}
 
-nav > ul {
-	display: flex;
-	justify-content: space-evenly;
-
-  }
-
-  nav > ul > li {
-	color: #dfdfe2;
-	margin: 0 0.4rem;
-	padding: 0.2rem;
-	display: block;
-  }
-
-  li > a, a {
-	color: inherit;
-	text-decoration: none;
-  }
-
-  nav > ul > li:hover {
-	background-color: #dfdfe2;
-	color: #1b1b32;
-	cursor: pointer;
-  }
-
-	header > h1:hover{
-		background-color: #dfdfe2;
-		color: #1b1b32;
-		cursor: pointer;
-	}
 	.container,.slideshow-container{
 		padding-bottom: 10%;
 	}
