--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -17,7 +17,6 @@ body
 
 
 
-
 .mySlides {
     display: none;
 }
@@ -63,8 +62,8 @@ nav a:hover, a:hover {
   footer{
 	text-align: center;
    margin-top: 5%;
-    position: fixed;
-    bottom: 0;
+   position: fixed;
+  	bottom: 0;
     width: 100%;
     height: 2rem;
     text-align: center;
@@ -72,6 +71,7 @@ nav a:hover, a:hover {
 		display: flex;
 		justify-content: space-evenly;
 		flex-wrap: wrap;
+		background-color: lightblue;
   }
 	.project-pic{
 		margin-left: 33%;
