--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,6 +17,7 @@
     <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity10.html">activity10</a></li>
 
   </ul>
 </nav>
