--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,6 +18,7 @@
     <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity10.html">activity10</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity11/Udoeyop_Activity11.html">activity11</a></li>
 
   </ul>
 </nav>
