--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,8 +18,9 @@
     <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity10.html">activity10</a></li>
-    <li><a href="https://mavedave6.github.io/itis3135/Activity11/Udoeyop_Activity11.html">activity11</a></li>
-    <li><a href="https://mavedave6.github.io/itis3135/Activity12/Udoeyop_Activity12.html">activity12</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity11/Udoeyop_Activity11.html">Activity11</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity12/Udoeyop_Activity12.html">Activity12</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity13/Udoeyop_Activity13.html">Activity13</a></li>
 
   </ul>
 </nav>
