--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,7 +17,7 @@
     <li><a href="https://mavedave6.github.io/itis3135/accessibility/Udoeyop-Activity_Accessibility.html">Accessibility</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/slideshow.html">Slideshow</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/design.html">Project_Design</a></li>
-    <li><a href="https://mavedave6.github.io/itis3135/Activity10.html">activity10</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity10.html">Activity10</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity11/Udoeyop_Activity11.html">Activity11</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity12/Udoeyop_Activity12.html">Activity12</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity13/Udoeyop_Activity13.html">Activity13</a></li>
