--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -22,6 +22,7 @@
     <li><a href="https://mavedave6.github.io/itis3135/Activity12/Udoeyop_Activity12.html">Activity12</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity13/Udoeyop_Activity13.html">Activity13</a></li>
     <li><a href="https://mavedave6.github.io/itis3135/Activity14/Activity14.html">Activity14</a></li>
+    <li><a href="https://mavedave6.github.io/itis3135/Activity15/Activity15.html">Activity15</a></li>
 
   </ul>
 </nav>
