--- a/itis3135/project/styles/pagestyles.css
+++ b/itis3135/project/styles/pagestyles.css
@@ -5,10 +5,13 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #533906;
-  color: white;
+  background-color: #C1F9FC;
+  color: black;
 
-
+}
+h1, h2, h3, h4 {
+  font-family: 'Lobster', cursive;
+  text-align: center;
 }
 
 .container{
@@ -147,4 +150,23 @@ header {
 h3, p{
   font-weight: normal;
   text-align: center;
+}
+#accordion h3 {
+  background-color: #f1c40f;
+  color: #ffffff;
+  padding: 10px;
+  cursor: pointer;
+}
+
+#accordion div ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#accordion div li {
+  background-color: #95a5a6;
+  color: #ffffff;
+  margin: 5px;
+  padding: 5px;
 }
