--- a/itis3135/project/styles/pagestyles.css
+++ b/itis3135/project/styles/pagestyles.css
@@ -97,7 +97,7 @@ h1, h2, h3, h4 {
 
 .navigation-items{
  display:flex;
- width: 250px;
+ width: 350px;
  justify-content: space-between;
 
 
@@ -109,7 +109,7 @@ padding: 20px;
  float: right;
  border: 1px solid black;
  border-radius: 25px;
- width: 20%;
+ width: 30%;
  justify-content: center;
 }
 nav>a{
@@ -120,9 +120,7 @@ nav>a{
 nav>a:hover{
  color:#533906;
 }
-header{
-  background-color: inherit;
-}
+
 
 
 
@@ -142,7 +140,7 @@ header {
 
 .big-txt{
   text-align:center;
-  margin-left: -25%;
+  margin-left: -17%;
   font-family: Papyrus;
   font-size: 45px;
 
@@ -170,3 +168,55 @@ h3, p{
   margin: 5px;
   padding: 5px;
 }
+.button{
+  display: block;
+  margin: auto;
+}
+.input,input, textarea{
+  display: block;
+  margin: auto;
+
+  padding: 3px;
+
+ }
+ input[type="submit"] {
+
+     background-color: #533906;
+     color: white;
+     border-radius: 5px;
+     margin-top: 10px;
+     width: 50px;
+ }
+ nav ul {
+ 	list-style: none;
+ 	margin: 0;
+ 	padding: 0;
+ 	display: flex;
+ 	flex-wrap: wrap;
+ }
+ nav li {
+ 	margin: 0 10px;
+ 	margin-top: 2px;
+ 	text-align:center;
+ }
+ nav a, h1 a{
+ 	color: black;
+ 	text-decoration: none;
+ }
+ nav a:hover, a:hover {
+ 	color: lightgray;
+ }
+ footer{
+   color: black;
+   text-align: center;
+   width: 100%;
+   height: 2rem;
+   text-align: center;
+  color: black;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+ }
+ .container{
+   padding-bottom: 10%;
+ }
