--- a/itis3135/project/styles/styles.css
+++ b/itis3135/project/styles/styles.css
@@ -4,13 +4,13 @@ html{
 }
 body{
     margin: 0;
-    background-image: url(book3.jpg);
+    background-image: url("books.jpg");
     background-size:cover;
 
    }
 .navigation-items{
     display:flex;
-    width: 250px;
+    width: 300px;
     justify-content: space-between;
 
 }
@@ -23,7 +23,7 @@ body{
     margin-right: 5%;
     border: 1px solid black;
     border-radius: 25px;
-    width: 20%;
+    width: 30%;
     justify-content: center;
     opacity: 0.8;
 }
