--- a/itis3135/project/styles/styles.css
+++ b/itis3135/project/styles/styles.css
@@ -6,6 +6,7 @@ body{
     margin: 0;
     background-image: url("books.jpg");
     background-size:cover;
+    background-color: #C1F9FC; 
 
    }
 .navigation-items{
