--- a/itis3135/project/styles/pagestyles.css
+++ b/itis3135/project/styles/pagestyles.css
@@ -13,6 +13,9 @@ h1, h2, h3, h4 {
   font-family: 'Lobster', cursive;
   text-align: center;
 }
+h2{
+  font-size: 20px;
+}
 
 .container{
   margin-top: 10%;
